Prepare for membership explosion.
